// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallClipRotate> mount to match snapshot: enzyme.mount 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 26px;
  margin: 2px;
  width: 26px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.75s 0s linear infinite;
  background: transparent !important;
  border: 2px solid #ffffff;
  border-bottom-color: transparent;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.75s 0s linear infinite;
}

<BallClipRotate
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
  </div>
</BallClipRotate>
`;

exports[`<BallClipRotate> render to match snapshot: enzyme.render 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 26px;
  margin: 2px;
  width: 26px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.75s 0s linear infinite;
  background: transparent !important;
  border: 2px solid #ffffff;
  border-bottom-color: transparent;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.75s 0s linear infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;

exports[`<BallClipRotate> shallow to match snapshot: enzyme.shallow 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 26px;
  margin: 2px;
  width: 26px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.75s 0s linear infinite;
  background: transparent !important;
  border: 2px solid #ffffff;
  border-bottom-color: transparent;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.75s 0s linear infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;
